Tabla de Usuarios
avance de la tabla de usuarios en el fin de semana

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.application.name=Fienaku
+spring.application.name=product
 server.port=8080
+spring.h2.console.enabled=true
+upload.root-location=upload-dir
+springdoc.paths-to-exclude=/swagger-resources/**
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
