--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Fienaku</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Fienaku</name>
-    <description>Project Fienakuu</description>
+    <description>Project Fienaku</description>
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>2020.0.1</spring-cloud.version>
